feat(linalg): migrate to packed double-float for speed (todo 94 Phase 5b)
linalg constructors and array-building ops now build packed double-float
arrays -- 2.0-3.6x faster on the JVM (matmul 2.0x, chained elementwise 2.6x,
dot 3.6x vs the general-array baseline), with no flag, on every backend linalg
runs on. Output type is numpy-style input-dependent: constructors and
array-building ops return doubles, while a scalar reduction follows the element
type (a bare integer array still reduces to an integer/ratio). Singular `det`
returns 0.0 for consistency.

Because the WASM backends print a non-terminating float at fewer significant
digits than the interpreter and JVM, the tests, docs and examples use
power-of-two matrices for inv/solve (exact short decimals) or scaled integers,
so output stays byte-identical across all four backends.

Reconciled the full surface: unit tests (interpreter / JVM / WASM), the
linalg-package-cross-backend ci-spec case, the linalg-*.md detail pages
(en + ja), the linear-algebra guide, the functions reference table and intro
(en + ja), .kb/linalg.md, and the ml example goldens. linear-regression is
rewritten from an exact-rational showcase to floating-point least-squares with
scaled-integer output (raw floats diverged on WASM and array-equal broke its
exact-solution check).

Verified: full suite 2905 green, native CiSpecE2eTest 724 green (four backends),
DocExamplesTest 415 green, the three ml examples byte-identical on all four
backends, -Pweb compile, javadoc 0 warnings.

Step 3 (JVM --simd linalg lane acceleration) is user-approved and planned in
.todo/94; it is not part of this commit.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01WtpQGz8jTdD3oMHXiFq1dz